# xarm7_ros2_simulation

./: .gitignore  LICENSE  README.md  ReadMe.md  ReadMe_cn.md
attach_detach/: CMakeLists.txt  attach_detach.cc  copy.sh  package.xml
msg_gazebo/: CMakeLists.txt  package.xml
msg_gazebo/srv/: AttachDetach.srv
robot_data/: saved_joint_poses.yaml  saved_poses.yaml
xarm7_aruco_pick/: CMakeLists.txt  package.xml
xarm7_aruco_pick/config/: aruco_params.yaml
xarm7_aruco_pick/launch/: aruco_pick.launch.py
xarm7_aruco_pick/src/: aruco_detector_node.cpp
xarm7_bringup/: package.xml  setup.cfg  setup.py
xarm7_bringup/launch/: xarm7_bringup.launch.py
xarm7_pipeline/: CMakeLists.txt  package.xml
xarm7_pipeline/src/: xarm7_pipeline_node.cpp
xarm7_pose_saver/: CMakeLists.txt  package.xml
xarm7_pose_saver/config/: saved_poses.yaml
xarm7_pose_saver/launch/: pose_saver.launch.py
xarm7_pose_saver/src/: pose_saver.cpp
xarm_api/include/xarm_api/: xarm_driver.h  xarm_msgs.h
xarm_api/launch/: _robot_driver.launch.py
xarm_api/src/: xarm_driver.cpp  xarm_driver_service.cpp
xarm_controller/include/xarm_controller/hardware/: uf_robot_system_hardware.h
xarm_controller/launch/: _dual_ros2_control.launch.py  _robot_ros2_control.launch.py  _ros2_control.launch.py
xarm_controller/src/hardware/: uf_robot_system_hardware.cpp
xarm_description/urdf/xarm7/: xarm7.urdf.xacro
xarm_gazebo/launch/: _dual_robot_beside_table_gazebo.launch.py  _robot_beside_table_gazebo.launch.py  _robot_beside_table_ignition.launch.py
xarm_gazebo/worlds/: table.world
xarm_gazebo/worlds/models/bookshelf_2/: model.config  model.sdf
xarm_gazebo/worlds/models/box_1/: model.sdf
xarm_gazebo/worlds/models/box_2/: model.sdf
xarm_gazebo/worlds/models/shelf/: model.sdf
xarm_gazebo/worlds/models/turtlebot3_house/: model.config  model.sdf
xarm_moveit_config/launch/: _dual_robot_moveit_gazebo.launch.py  _robot_moveit_gazebo.launch.py  _robot_moveit_ignition.launch.py  xarm7_moveit_gazebo.launch.py
xarm_moveit_config/rviz/: moveit.rviz  planner.rviz
xarm_moveit_config/srdf/: _xarm7_macro.srdf.xacro
xarm_moveit_interface/: package.xml  setup.cfg  setup.py  xarm_moveit_interface.py
xarm_msgs/: CMakeLists.txt
xarm_planner/launch/: xarm7_planner_gazebo.launch.py
xarm_vision/d435i_xarm_setup/: CMakeLists.txt  package.xml
xarm_vision/d435i_xarm_setup/config/: extra_robot_api_params.yaml  lite_rs_on_hand_calibration.calib  uf850_rs_on_hand_calibration.calib  xarm_rs_on_hand_calibration.calib
xarm_vision/d435i_xarm_setup/launch/: d435i_findobj2d_robot_api.launch.py  d435i_findobj2d_robot_moveit_planner.launch.py  d435i_robot_auto_calib.launch.py  d435i_robot_ork_linemod.launch.py  grasp_node_robot_api.launch.py  grasp_node_robot_moveit_planner.launch.py  publish_handeye_tf.launch.py  start_find_obj_2d.launch.py
xarm_vision/d435i_xarm_setup/src/: findobj_grasp_moveit_planner.cpp  findobj_grasp_xarm_api.cpp  tf_object_to_base.cpp
